# chessengine

./: CMakeLists.txt  Doxyfile  README.md  notes.txt
Serialize/: CMakeLists.txt  ser.cpp
app/: main.cxx  uci.cxx
docs/: index.md
html/: colors_8hpp_source.html  dir_000015_000014.html  dir_09e761304027c904456130627fd4dcf5.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_22e84c7a6338acea7d524f2336286d72.html  dir_2985a148f648d04d0d16fbad681c1f1f.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_503499f10775c5f64cb3c1df569578f8.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_70fdd90e5ad1db75e0b81088ca82f920.html  dir_71cd57246459ac95ee25ac66c4441291.html  dir_92f8d4f9bf3e37a29ad8dc2a562003ec.html  dir_b8ca6e48388894a8360c66806c1a9459.html  dir_cd61a0397aecc051029f669b429bff07.html  dir_d9e746d4ac961166e4bb5c5bc4e6e54f.html  dir_efa7ca0a9c55aa8127ea50c62147222a.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  lut_8hpp.html  lut_8hpp__incl.dot  lut_8hpp_source.html  md_README.html  md_docs_index.html  menudata.js  pages.html  print_8hpp.html  print_8hpp__incl.dot  print_8hpp_source.html  types_8hpp_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
includes/: attempt.hpp  chessboard.hpp  colors.hpp  def.hpp  eval.hpp  fen_eater.hpp  gen_move.hpp  hash.hpp  lut.hpp  magic.hpp  move.hpp  move_maker.hpp  person.hpp  pieces.hpp  position.hpp  position_eval.hpp  print.hpp  pst.hpp  types.hpp  utils.hpp
python/: DebugWithStockfish.py  PerftFromFile.py  RunUnitTest.py  RunUnitTestPerformance.py
python/data/: Performance_2401120226.csv  dataPerformance_2401120504.csv
python/performance/: Performance_2401120615.csv  PerftTest.csv  SearchResults.csv  SearchTest_2401131146.csv  SearchTest_2401132101.csv  SearchTest_2401141609.csv
src/: LegalMoveMaker.cpp  attempt.cpp  chessboard.cpp  eval.cpp  gen_move.cpp  hash.cpp  lut.cpp  magic.cpp  main  main.cpp  move_maker.cpp  person.cpp  position.cpp  position_eval.cpp  print.cpp  utils.cpp
test/: CMakeLists.txt  FENs.sh  boostTester.cpp  test_main.cpp
